+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.
Latest changes go on top, different types of changes may be mixed.

Changes in ATK 6.3
------------------
+ Added ability to set a different template for the tooltip for each record
  in an atkExtendableShuttleRelation. [Dennis]
* Improved support for more complex selectors in atkDataNode::getCriteria() 
  [Peter, Dennis]
+ When using the configuration option "mail_redirect" in atkMailer, prefix
  the mail body to show the original recipients [Patrick]
* In atkQuery, the join condition in addJoin is moved from the where clause 
  to the join clause where it belongs. [Patrick]
* Fixed forgetCriteria() and saveCriteria() from abstractsearchhandler, 
  when we use transact sql db. [Yury]
* Attribute values from the request will be used by initial_values. [Peter]
+ Added atkOneToManyRelation::setUseRefKeyForFilter which can be used
  to disable the usage of the ref key as filter for the grid. This allows
  you to use a atkOneToManyRelations inside a node which has no direct
  link with the parent node (mainly for displaying stuff). [Peter]
* Fixed brackets in the count query, they are now the same as the select
  query uses. [Sandy]
* atkZip::extract no longer throws warnings when $entries is omitted when
  using 'internal' mode. This is a PHP bug work around. [mvdvelden]
* The atkNode::editArray may now return an "extra" column for fields with
  arbitrary data that needs to be passed to the edit template. [Peter]
* Empty list option can now be configured on a per node field basis. [Peter]
* Fixed searching in fields with autocompletion in  m2o relations. [Martin] 
+ Added atkManyToManyListRelation::setAutoCalculateRows which makes it
  possible to turn off the default behavior of calculating the displayed